<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MH02_Input_Code">


    <ImageView
        android:id="@+id/close_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="@dimen/padding_default_"
        app:srcCompat="@drawable/ic_round_close_24_"
        android:src="@drawable/ic_round_close_24_"
        />

    <TextView
        android:id="@+id/phone_tv"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default_"
        tools:text="0938936121"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code_sent_via_sms"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/font_default_"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_24dp">

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            app:bar_enabled="true"
            app:bar_height="2dp"
            app:height="40dp"
            app:length="6"
            app:otp=""

            app:otp_text_size="24dp"
            app:width="40dp" />

        <!--
        app:otp_box_background_active="@drawable/bg_not_fill_01"
            app:otp_box_background_error="@drawable/bg_not_fill_03"
            app:otp_box_background_inactive="@drawable/bg_not_fill_02"
        -->

        <!--<Button
            android:id="@+id/read_btn"
            android:layout_marginTop="@dimen/padding_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/phone_verification"
            android:textSize="@dimen/font_default_"
            android:textColor="@color/white" />-->

        <TextView
            android:id="@+id/state1_tv"
            tools:text="@string/resend_code_after_x"
            style="@style/text_style_1"
            android:textColor="@color/grey_500"/>
        <TextView
            android:id="@+id/state2_tv"
            android:text="@string/resend_code"
            style="@style/text_style_1"
            android:textColor="@color/light_blue_700"
            android:visibility="gone"
            tools:visibility="visible"/>
        <TextView
            android:id="@+id/state3_tv"
            android:text="@string/sign_up_with_email"
            style="@style/text_style_1"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>

</LinearLayout>